# OpenGL-Practice

./: .gitmodules  Makefile  README.md  code_extensions  glew  simple.c  windows.c
1.windows/: CMakeLists.txt  Makefile  README  README.md  build.sh  clean.sh  windows  windows.c
2.shaders/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c  main2.c  program
2.shaders (works on both Linux CLI and Win10 VS)/: CMakeCache.txt  Project1.sln
2.shaders (works on both Linux CLI and Win10 VS)/Project1/x64/Release/Project1.tlog/: CL.write.1.tlog  link.delete.1.tlog
2.shaders/1.SimpleVersion/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  clean.sh  cmake_install.cmake  main.c  program
2.shaders/1.SimpleVersion/Dependencies/src/: main.c
2.shaders/2.read_from_file/: CMakeCache.txt  Makefile  README.md  basic.shader  cmake_install.cmake  main.c
2.shaders/2.read_from_file/Dependencies/src/: main.c
2.shaders/2.read_from_file/include/glad/: glad.h
2.shaders/3.with_MVS_solution/: Makefile
2.shaders/3.with_MVS_solution/Project1/Debug/Project1.tlog/: Project1.lastbuildstate
2.shaders/3.with_MVS_solution/Project1/x64/Debug/: Project1.exe.recipe  vc142.idb
2.shaders/3.with_MVS_solution/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
2.shaders/3.with_MVS_solution/x64/Debug/: Project1.ilk
2.shaders_read_from_file/: README.md  basic.shader  testnr1  text.txt
2.shaders_with_MVS_solution/Dependencies/include/glad/: glad.h
2.shaders_with_MVS_solution/Project1/x64/Debug/: vc142.idb
2.shaders_with_MVS_solution/Project1/x64/Release/Project1.tlog/: link.command.1.tlog
3.rectangle_indexed_vertices/: CMakeCache.txt  CMakeLists.txt  Makefile  basic.shader  main.c  main2.c  testnr1
3.rectangle_indexed_vertices/C/: CMakeLists.txt  Makefile  basic.shader  main.c
3.rectangle_indexed_vertices/C++/: CMakeCache.txt  CMakeLists.txt  Makefile  build.sh  clean.sh  cmake_install.cmake  main.cpp  program  testnr1
3.rectangle_indexed_vertices/C++/include/: basic.shader
3.rectangle_indexed_vertices/C/src/: glad.c
3.rectangle_indexed_vertices/Fancy_Gradient_Effect_CPP/: CMakeCache.txt  Makefile  basic.shader  build.sh  cmake_install.cmake  main.cpp  program
3.rectangle_indexed_vertices/Fancy_Gradient_Effect_CPP/include/: linmath.h
OPENGL/: CMakeLists.txt  Makefile  program
OPENGL/Project1/: cmake_install.cmake
OPENGL/Project1/Debug/: vc142.idb
OPENGL/Project1/Dependencies/include/: linmath.h
OPENGL/Project1/Dependencies/include/common/: loadShader.cpp
OPENGL/Project1/Dependencies/src/: glad.c
OPENGL/Project1/Project1/: Project1.vcxproj  main.cpp
OPENGL/Project1/Project1/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
OPENGL/Project1/Project1/x64/Debug/Project1.tlog/: CL.command.1.tlog  Project1.lastbuildstate
OPENGL/Project1/Project1/x64/Release/Project1.tlog/: CL.read.1.tlog  Project1.lastbuildstate  Project1.write.1u.tlog  link.read.1.tlog
OPENGL/Project1/x64/Debug/Project1.tlog/: CL.read.1.tlog  CL.write.1.tlog
OPENGL/Project1/x64/Release/: Project1.iobj
OPENGL/Project1/x64/Release/Project1.tlog/: CL.command.1.tlog  link.write.1.tlog
OPENGL/x64/Release/: Project1.ipdb
simple/: Makefile  glad.h  simple  simple.c
test/: CMakeCache.txt  Makefile  README  cmake_install.cmake  main.c  testnr1
